fixing alignment for skills container for smaller devices

--- a/style/about.css
+++ b/style/about.css
@@ -492,7 +492,7 @@ body {
         height: auto;
         margin-top: 12%;
         text-align: center;
-        margin-right: 10%;
+        margin-right: -10%;
     }
 }
 @media screen and (min-width: 481px) {
